--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-12  col-sm-12 col-lg-6">
-            <img src="images/hero-section-image.png" class=" mx-lg-auto img-fluid mb-5" alt="Bootstrap Themes"  loading="lazy">
-            <button type="button" class=" mt-5 btn btn-primary d-lg-block d-flex justify-content-sm-end  btn-lg px-4  mx-lg-auto text-capitalize img-fluid">get-started</button>
+            <img src="images/hero-section-image.png" class=" m-auto mx-lg-auto img-fluid mb-5 d-flex justify-content-center" alt="Bootstrap Themes"  loading="lazy">
+            <button type="button" class=" mt-5 m-auto btn btn-primary d-lg-block d-flex justify-content-sm-end  btn-lg px-4  mx-lg-auto text-capitalize img-fluid">get-started</button>
           </div>
           <div class="col-lg-6">
             <h1 class=" text-capitalize fw-bold  text-center lh-1 mb-3">streamline your <br> entire product <br> design workflow</h1>
